# rustslinger

./: Cargo.toml  Cross.toml  LICENSE-MIT  README.md
.github/workflows/: codeql.yml
src/: analysis.rs  download.rs  error.rs  main.rs
