[package]
name = "rust-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", features = ["thread-pool"]}
aws-config = "0.52.0"
aws-sdk-s3 = "0.22.0"
aws-smithy-http = "0.52.0"
sha2 = "0.10"
hex-literal = "0.3.4"
bytes = "1"
image = "0.24.5" 
rqrr = "0.6.0"
num_cpus = "1.15.0"
