[package]
name = "rustslinger"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Kessler <tom@rkessler.group>"]
description = "rustslinger is a tool for scanning and analysing large image data sets stored on AWS S3 buckets."
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.11"
futures = { version = "0.3", features = ["thread-pool"]}
aws-config = "0.52.0"
aws-sdk-s3 = "0.22.0"
aws-smithy-http = "0.53.0"
sha2 = "0.10"
hex-literal = "0.3.4"
bytes = "1.3.0"
image = "0.24.5" 
rqrr = "0.6.0"
num_cpus = "1.15.0"
kamadak-exif = "0.5.5"
clap = {version = "4.0.32", features =["derive"]}
thiserror = {version ="1"}
anyhow = {version ="1"}

[profile.release]
lto = true
codegen-units = 1


